// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationMap renders default 1`] = `
<div
  class="css-iq9swa"
  data-cy="configurationMap"
>
  <dl
    class="css-1p6nhgy"
    data-cy="configurationMapSection"
  >
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
    </div>
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with actions 1`] = `
<div
  class="css-iq9swa"
  data-cy="configurationMap"
>
  <dl
    class="css-1p6nhgy"
    data-cy="configurationMapSection"
  >
    <div
      class="css-1efprzz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-67j5fi"
          data-cy="secondaryButton"
          tabindex="0"
          type="button"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
    <div
      class="css-1efprzz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-67j5fi"
          data-cy="secondaryButton"
          tabindex="0"
          type="button"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
    <div
      class="css-1efprzz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-67j5fi"
          data-cy="secondaryButton"
          tabindex="0"
          type="button"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with default value 1`] = `
<div
  class="css-iq9swa"
  data-cy="configurationMap"
>
  <dl
    class="css-1p6nhgy"
    data-cy="configurationMapSection"
  >
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        —
      </dd>
    </div>
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        —
      </dd>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with headline 1`] = `
<div
  class="css-iq9swa"
  data-cy="configurationMap"
>
  <dl
    class="css-1p6nhgy"
    data-cy="configurationMapSection"
  >
    <h1
      class="css-13pfdrv"
      data-cy="configurationMapHeading"
    >
      Jane Doe Info
    </h1>
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
    </div>
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
    </div>
  </dl>
</div>
`;
